_sass/base.scss
$htmlBackgroundColor: rgb(255, 255, 255);
$sectionBackgroundColor: rgba(220, 220, 220, 0.8);
$bodyColor: #000000;
$bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";

@import "crt.scss";

html {
  background-attachment: fixed;
  background-size: cover;
  background-color: $htmlBackgroundColor;
  text-align: left;
  color: $bodyColor;
  font-family: $bodyFont;
}

footer {
  position: fixed;
  color: black;
  background-color: $sectionBackgroundColor;
  font-family: monospace;
  bottom: 0px;
  left: 0px;
  padding: 5px;
  margin: 0px;
  display: block;
  width: 100%;
}

footnote {
  padding-left: 25px;
  color: rgb(50, 50, 50);
  background-color: rgba(10, 10, 10, 0.2);
}

section {
  color: black;
  background-color: $sectionBackgroundColor;
  padding: 4px;
  display: inline-block;
}

a {
  color: rgb(50, 50, 255);
  text-decoration: underline;
  text-decoration-thickness: 0px;
  animation: text-decoration-thickness 0.1s;
}

a:hover {
  text-decoration: underline;
  text-decoration-thickness: 2px;
  animation: text-decoration-thickness 0.1s;
}

code {
  color: white;
  background-color: rgb(25, 25, 25);
  padding: 2px;
  border-radius: 4px;
  display: inline-block;
  cursor: pointer;
}

